finis exit_code et fonction exit tout marche enikel

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "files.associations": {
-        "minishell.h": "c"
+        "minishell.h": "c",
+        "functions.h": "c",
+        "macros.h": "c",
+        "readline.h": "c"
     }
 }
